k8s/cluster/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: uptime-kuma
      port: 3001
