k8s/cluster/uptime-kuma/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "uptime-kuma-ingress"
  namespace: "uptime-kuma"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: public
  rules:
    - host: "status.gastbob40.ovh"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "uptime-kuma"
                port:
                  number: 3001
  tls:
    - hosts:
        - "status.gastbob40.ovh"
      secretName: "uptime-kuma-tls"
